# Source file definition. 
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (transcoder  "transcoder.cpp" "transcoder.h" "Headerdecode.cpp" "Headerdecode.h" "Bytehandler.cpp" "Bytehandler.h" "Inserter.cpp" "Inserter.h")

# TODO: Add tests and install targets if needed.
